feed overflow fix

--- a/src/styles/components/_feed.scss
+++ b/src/styles/components/_feed.scss
@@ -6,6 +6,7 @@
     flex: 1;
     width: 100%;
     height: 100%;
+    overflow-y: auto;
 
     &__grid {
       display: grid;
